--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   width: 100%;
   align-items: center;
   background-color: #282c34;
+  z-index: 10;
   justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -69,6 +70,39 @@
   margin: 10px auto;
   border-radius: 5px;
   position: relative;
+  z-index: 0;
+  transition: .3s;
+  cursor: pointer;
+}
+.todo-сomplete{
+  font-size: 14px;
+}
+.todo-complete_button{
+  font-size: 40px;
+  display: block;
+  position: absolute;
+  top: 2;
+  left: -54px;
+  z-index: 1;
+  opacity: 0;
+  color: #fff;
+  background-color: green;
+  padding: 10px;
+  transition: .3s;
+  width: 34px;
+}
+.todoItem:hover .todo-complete_button{
+  opacity: 1;
+}
+.todo-text{
+  text-align: left;
+  margin: 25px 5px 5px 5px;
+  padding: 4px 8px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.strike{
+  color: #fff;
+  background-color: green;
 }
 .todo-delete{
   position: absolute;
